@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 1.17
 
+- Added support for rejecting whole messages when the recipient count is
+  exceeded in plugin-counters.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
